# featherweight-java

./: Cargo.toml  README.md  TODO.txt  test.fj  test2.fje  test3.fj
examples/: boolean.fj  boolean.fje  full.fj  function.fj  function.fje  list.fj  list.fje  map.fje  option.fj  option.fje  peano.fj  peano.fje  stdlib.fj  test.fje
src/: ast.rs  class_table.rs  class_tree.rs  error.rs  evaluation.rs  fj.pest  main.rs  parser.rs  semantic.rs  typecheck.rs
