[package]
name = "featherweight-java"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.51"
derive_more = "0.99.17"
pest = "2.1.3"
pest_derive = "2.1.0"
structopt = { version = "0.3", features = [ "paw" ] }
paw = "1.0"
